tests/baselines/reference/arityErrorRelatedSpanBindingPattern(strict=true).errors.txt
arityErrorRelatedSpanBindingPattern.ts(1,14): error TS7006: Parameter 'a' implicitly has an 'any' type.
arityErrorRelatedSpanBindingPattern.ts(1,17): error TS7006: Parameter 'b' implicitly has an 'any' type.
arityErrorRelatedSpanBindingPattern.ts(1,21): error TS7031: Binding element 'c' implicitly has an 'any' type.
arityErrorRelatedSpanBindingPattern.ts(3,14): error TS7006: Parameter 'a' implicitly has an 'any' type.
arityErrorRelatedSpanBindingPattern.ts(3,17): error TS7006: Parameter 'b' implicitly has an 'any' type.
arityErrorRelatedSpanBindingPattern.ts(3,21): error TS7031: Binding element 'c' implicitly has an 'any' type.
arityErrorRelatedSpanBindingPattern.ts(5,1): error TS2554: Expected 3 arguments, but got 2.
arityErrorRelatedSpanBindingPattern.ts(7,1): error TS2554: Expected 3 arguments, but got 2.


==== arityErrorRelatedSpanBindingPattern.ts (8 errors) ====
    function foo(a, b, {c}): void {}
                 ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                    ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
                        ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    
    function bar(a, b, [c]): void {}
                 ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                    ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
                        ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    
    foo("", 0);
    ~~~
!!! error TS2554: Expected 3 arguments, but got 2.
!!! related TS6211 arityErrorRelatedSpanBindingPattern.ts:1:20: An argument matching this binding pattern was not provided.
    
    bar("", 0);
    ~~~
!!! error TS2554: Expected 3 arguments, but got 2.
!!! related TS6211 arityErrorRelatedSpanBindingPattern.ts:3:20: An argument matching this binding pattern was not provided.
    